--- a/tf_example.ipynb
+++ b/tf_example.ipynb
@@ -35,7 +35,12 @@
     "cost = x[0][0]* w**2 + x[1][0]*w + x[2][0]\n",
     "train = tf.train.GradientDescentOptimizer(0.01).minimize(cost)\n",
     "\n",
-    "init = tf.global_variables_initializer()\n",
+    "init = tf.global_variables_initializer() \n",
+    "\n",
+    "#with tf.Session() as session:\n",
+    "    #session.run(init)\n",
+    "    #print(session.run(w))\n",
+    "    \n",
     "session = tf.Session()\n",
     "session.run(init)\n",
     "print(session.run(w))"
